# Natural-Language-Database-Interface

./: README.md  amazon.db  create_database.py  main.py
ai-data-analyst-2-main/: frontend.py  pyproject.toml
